added category-wise news

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-header {
+/* header {
   display: flex;
   justify-content: start;
   align-items: center;
@@ -9,16 +9,18 @@ header {
   gap: 1.75rem;
   background-color: rgba(70, 69, 69, 0.993);
   color: white;
-}
+} */
 
-header nav ul {
+/* header nav ul {
   list-style: none;
   display: flex;
   align-items: center;
   gap: 1.5rem;
+} */
+
+button {
+  cursor: pointer;
 }
-
-
 
 /* #root {
   max-width: 1280px;
